# linphone-simple

./: CMakeLists.txt  README.md  linphone.apparmor  linphone.cibersheep_0.2_armhf.click  linphone.desktop  linphone.desktop.in  manifest.json
linphone/: CMakeLists.txt  incoming-call.sh
linphone/lib/arm-linux-gnueabihf/: libantlr3c-3.2.so.0  libbctoolbox-tester.so.1  libbctoolbox.so.1  libbcunit.so.1.0.1  libbzrtp.so.0  liblinphone.so.9  libmediastreamer_base.so.10  libmediastreamer_voip.so.10  libopus.la  libopus.so.0.6.1  libortp.so.13  libspeex.la  libspeex.so.1.5.1  libspeexdsp.la  libspeexdsp.so.1.5.0  libsrtp2.so.1
linphone/lib/arm-linux-gnueabihf/pkgconfig/: bctoolbox-tester.pc  bctoolbox.pc  bcunit.pc  belle-sip.pc  ortp.pc
linphone/share/linphone/: rootca.pem
plugins/: CMakeLists.txt
plugins/Linphone/: CMakeLists.txt  linphone.cpp  linphone.h  plugin.cpp  plugin.h  qmldir
plugins/ServiceControl/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir  servicecontrol.cpp  servicecontrol.h
po/: linphone.pot
qml/: CallButton.qml  DialerPage.qml  IncomingCall.qml  KeypadEntry.qml  Totest.qml  dialer-app.qml
ringtones/: README.md
